# ocaml-inotify-event

./: .gitignore  Dockerfile  dune-project  inotify-event.opam
lib/: dune
src/: dune  inotify_events.ml
