opam-version: "1.2"
name: "inotify-event"
version: "0.1.0"
maintainer: "sheets@alum.mit.edu"
authors: ["David Sheets"]
homepage: "https://github.com/dsheets/ocaml-inotify-event"
bug-reports: "https://github.com/dsheets/ocaml-inotify-event/issues"
dev-repo: "https://github.com/dsheets/ocaml-inotify-event.git"
license: "ISC"
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build}
  "base-bytes"
  "inotify" {>= "2.2"}
  "sexplib"
  "ppx_sexp_conv"
  "ppx_deriving"
  "cmdliner"
]
